--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Brady Bateman</title>
+  <title>Braeden Bateman</title>
 </head>
 <body>
-  <h1>Hi, I'm Brady 👋</h1>
+  <h1>Test</h1>
   <p>Welcome to my portfolio.</p>
 </body>
 </html>
