--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Braeden Bateman</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Braeden Bateman Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+    }
+    header {
+      background: #111;
+      color: #fff;
+      padding: 2rem;
+      text-align: center;
+    }
+    section {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+      background: #fff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin-bottom: 2rem;
+    }
+    h2 {
+      color: #333;
+    }
+    .project {
+      margin-bottom: 2rem;
+    }
+    .screenshot {
+      background: #eee;
+      padding: 1rem;
+      text-align: center;
+      border: 1px dashed #ccc;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-  <h1>Test</h1>
-  <p>Welcome to my portfolio.</p>
+  <header>
+    <h1>Brady Bateman</h1>
+    <p>Reverse Engineer • Technician • iOS Developer • Tinker Enthusiast</p>
+  </header>
+
+  <section>
+    <h2>iOS Tweak Development</h2>
+    <div class="project">
+      <h3>CalcConv – iOS Calculator Conversion Tweak</h3>
+      <p>A jailbreak tweak that brings iOS 18-style unit conversions to older versions like iOS 14. Features custom UI, category search, and runtime hooking via Theos and Objective-C.</p>
+      <div class="screenshot">[Screenshot Placeholder – Conversion UI]</div>
+    </div>
+    <div class="project">
+      <h3>Live Currency Extension</h3>
+      <p>Integrates live exchange rate lookups into CalcConv. Uses custom Swift/ObjC bridges to access currency APIs and perform conversion formatting.</p>
+      <div class="screenshot">[Screenshot Placeholder – Currency JSON Debug Log]</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Reverse Engineering & Firmware Projects</h2>
+    <div class="project">
+      <h3>USB Flash Drive Disassembly & Board Mapping</h3>
+      <p>Deconstructed Verbatim 32GB USB drive, traced NAND and controller models, created schematic diagram and BOM from physical analysis.</p>
+      <div class="screenshot">[Photo Placeholder – Annotated PCB]</div>
+    </div>
+    <div class="project">
+      <h3>PS2 Modbo 5.0 Install – GH-022 Board</h3>
+      <p>Manually soldered Modbo 5.0 to a 2006 PlayStation 2 board. Identified safe alternative 3.3V pads and resolved Y-break wire routing issue.</p>
+      <div class="screenshot">[Photo Placeholder – Modbo Installed]</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>PC & Hackintosh Builds</h2>
+    <div class="project">
+      <h3>Ryzen Hackintosh (OpenCore)</h3>
+      <p>Set up macOS Sonoma and later Sequoia on a Ryzen 5700G / RX 5600 XT system. Configured OpenCore bootloader, USB mapping, and ACPI patches.</p>
+      <div class="screenshot">[Screenshot Placeholder – OpenCore Config]</div>
+    </div>
+    <div class="project">
+      <h3>Custom Retro Game Box</h3>
+      <p>Converted T95Z Plus Android box into an emulation/media center using EmuELEC. Optimized boot performance and power cycling from remote.</p>
+      <div class="screenshot">[Photo Placeholder – Emulator UI]</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Hardware Mods & Diagnostics</h2>
+    <div class="project">
+      <h3>Hyundai Tucson V6 Intake & Exhaust Work</h3>
+      <p>Removed resonator box to enhance intake sound. Performed custom exhaust Y-pipe workaround and sequential shift tuning.</p>
+      <div class="screenshot">[Photo Placeholder – Intake Mod]</div>
+    </div>
+    <div class="project">
+      <h3>Hyperflash Fix with Resistors</h3>
+      <p>Installed load resistors behind signal bulbs, diagnosed bundled headlight harness wiring using multimeter and voltage drop checks.</p>
+      <div class="screenshot">[Photo Placeholder – Resistor Mounting]</div>
+    </div>
+  </section>
+
 </body>
 </html>
