--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 </head>
 <body>
   <header>
-    <h1>Brady Bateman</h1>
-    <p>Reverse Engineer • Technician • iOS Developer • Tinker Enthusiast</p>
+    <h1>Bradeden Bateman</h1>
+    <p>Reverse Engineer • Technician • iOS Developer • Freedom</p>
   </header>
 
   <section>
@@ -90,11 +90,6 @@
 
   <section>
     <h2>Hardware Mods & Diagnostics</h2>
-    <div class="project">
-      <h3>Hyundai Tucson V6 Intake & Exhaust Work</h3>
-      <p>Removed resonator box to enhance intake sound. Performed custom exhaust Y-pipe workaround and sequential shift tuning.</p>
-      <div class="screenshot">[Photo Placeholder – Intake Mod]</div>
-    </div>
     <div class="project">
       <h3>Hyperflash Fix with Resistors</h3>
       <p>Installed load resistors behind signal bulbs, diagnosed bundled headlight harness wiring using multimeter and voltage drop checks.</p>
