--- a/index.html
+++ b/index.html
@@ -3,56 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Braeden Bateman Portfolio</title>
+  <title>Brady Bateman Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
+      background: #1e1e2f;
+      color: #e0e0e0;
     }
     header {
-      background: #111;
-      color: #fff;
+      background: #121212;
+      color: #00ffcc;
       padding: 2rem;
       text-align: center;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     }
     section {
       padding: 2rem;
       max-width: 900px;
       margin: auto;
-      background: #fff;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      background: #29293d;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
       margin-bottom: 2rem;
+      border-radius: 10px;
     }
     h2 {
-      color: #333;
+      color: #00ffcc;
+      border-bottom: 1px solid #00ffcc;
+      padding-bottom: 0.5rem;
     }
     .project {
       margin-bottom: 2rem;
     }
-    .screenshot img {
+    .screenshot img, .screenshot video {
       width: 100%;
       max-width: 700px;
       display: block;
       margin: 1rem auto;
-      border: 1px solid #ccc;
+      border: 1px solid #444;
+      border-radius: 5px;
+    }
+    .caption {
+      text-align: center;
+      font-style: italic;
+      margin-top: -0.5rem;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Braeden Bateman</h1>
-    <p>Reverse Engineer • Technician • iOS Developer • Tech Freedom Enthusiast</p>
+    <p>Reverse Engineer • Technician • iOS Developer • Tinker Enthusiast</p>
   </header>
 
   <section>
     <h2>iOS Tweak Development</h2>
     <div class="project">
       <h3>CalcConv – iOS Calculator Conversion Tweak</h3>
-      <p>A jailbreak tweak that brings iOS 18-style unit conversions to older versions like iOS 14. Features custom UI, category search, and runtime hooking via Theos and Objective-C.</p>
+      <p>A jailbreak tweak that brings iOS 18-style unit conversions to older iOS, Currently only supports iPhone 12 or similar size devices. Features custom UI, category search, and runtime hooking via Theos and Objective-C.</p>
       <div class="screenshot">
-        <video controls width="100%" style="max-width:700px; display:block; margin:auto;">
+        <video controls>
           <source src="videos/CalcConvUI.mov" type="video/quicktime">
           Your browser does not support the video tag.
         </video>
@@ -79,7 +91,22 @@
       <p>Set up macOS Sonoma and later Sequoia on a Ryzen 5700G / RX 5600 XT system. Configured OpenCore bootloader, USB mapping, and ACPI patches.</p>
       <div class="screenshot">
         <img src="images/PC1.jpg" alt="White Hackintosh build with RGB cooling">
+      </div>
+    </div>
+    <div class="project">
+      <h3>Asus VivoBook X512DA Laptop Hackintosh</h3>
+      <p>Successfully configured macOS Big Sur on an AMD-based Asus VivoBook X512DA. Managed kexts, patched USB maps, and implemented Wi-Fi/trackpad compatibility fixes.</p>
+      <div class="screenshot">
+        <img src="images/hackintosh.jpeg" alt="VivoBook Hackintosh running macOS">
+        <div class="caption">Asus X512DA Laptop Hackintosh running Big Sur</div>
+      </div>
+    </div>
+    <div class="project">
+      <h3>Custom PC – Red Theme Build</h3>
+      <p>This configuration features a Ryzen 7 1700 and Radeon RX 5600 XT, optimized for thermals and a consistent red LED aesthetic.</p>
+      <div class="screenshot">
         <img src="images/PC2.jpg" alt="Red RGB PC build with air cooler">
+        <div class="caption">Ryzen 7 1700 / RX 5600 XT Configuration</div>
       </div>
     </div>
   </section>
@@ -97,4 +124,3 @@
 
 </body>
 </html>
-
