--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <h3>Asus VivoBook X512DA Laptop Hackintosh</h3>
       <p>Successfully configured macOS Big Sur on an AMD-based Asus VivoBook X512DA. Managed kexts, patched USB maps, and implemented Wi-Fi/trackpad compatibility fixes.</p>
       <div class="screenshot">
-        <img src="images/hackintosh.jpeg" alt="VivoBook Hackintosh running macOS">
+        <img src="images/hackintosh.jpg" alt="VivoBook Hackintosh running macOS">
         <div class="caption">Asus X512DA Laptop Hackintosh running Big Sur</div>
       </div>
     </div>
