--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
   <header>
     <h1>Braeden Bateman</h1>
-    <p>Reverse Engineer • Technician • iOS Developer • Tinker Enthusiast</p>
+    <p>Reverse Engineer • Technician • iOS Developer • Tech Freedom Enthusiast</p>
   </header>
 
   <section>
