--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     header {
       background: #003366;
-      color: #00ffcc;
+      color: #000000;
       padding: 2.5rem 1rem;
       text-align: center;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
