--- a/index.html
+++ b/index.html
@@ -6,44 +6,66 @@
   <title>Brady Bateman Portfolio</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
       background: #1e1e2f;
       color: #e0e0e0;
+      line-height: 1.6;
     }
     header {
-      background: #003366;
+      background: rgba(0, 51, 102, 0.85);
       color: #ffffff;
-      padding: 2.5rem 1rem;
+      padding: 2rem 1rem;
       text-align: center;
+      backdrop-filter: blur(8px);
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-      animation: fadeInDown 1s ease-out;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+    header h1 {
+      margin: 0 0 0.5rem 0;
+      font-size: 2.5rem;
+    }
+    header p {
+      margin: 0;
+      font-weight: 300;
+      font-size: 1rem;
     }
     section {
       padding: 2rem;
-      max-width: 900px;
-      margin: 2rem auto;
+      max-width: 960px;
+      margin: 3rem auto;
       background: #29293d;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-      border-radius: 10px;
-      animation: fadeInUp 0.8s ease-in-out;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.6);
+      border-radius: 12px;
+      animation: fadeInUp 1s ease;
     }
     h2 {
       color: #00ffcc;
+      font-size: 2rem;
+      margin-bottom: 1rem;
       border-bottom: 1px solid #00ffcc;
       padding-bottom: 0.5rem;
     }
     .project {
-      margin-bottom: 2.5rem;
+      margin-bottom: 3rem;
+      transition: box-shadow 0.3s ease;
+      padding: 1rem;
+      border-radius: 10px;
+    }
+    .project:hover {
+      box-shadow: 0 0 15px #00ffcc44;
+      background: #2f2f44;
     }
     .screenshot img, .screenshot video {
       width: 100%;
-      max-width: 700px;
+      max-width: 720px;
       display: block;
       margin: 1rem auto;
-      border: 1px solid #444;
-      border-radius: 6px;
+      border: 1px solid #555;
+      border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
       transition: transform 0.3s ease;
       cursor: pointer;
@@ -55,27 +77,27 @@
       text-align: center;
       font-style: italic;
       margin-top: -0.5rem;
-      color: #bbb;
+      color: #aaa;
     }
     footer {
       text-align: center;
-      color: #888;
-      font-size: 0.9rem;
-      padding: 2rem 1rem;
+      color: #777;
+      font-size: 0.85rem;
+      padding: 1.5rem;
       border-top: 1px solid #333;
+      margin-top: 3rem;
     }
     .highlight {
       font-weight: bold;
       color: #00ffcc;
     }
-    /* Lightbox popup */
     #lightbox {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.8);
+      background: rgba(0,0,0,0.85);
       display: none;
       justify-content: center;
       align-items: center;
@@ -85,10 +107,29 @@
       max-width: 90%;
       max-height: 90%;
       border: 4px solid white;
-      border-radius: 8px;
+      border-radius: 10px;
+      animation: zoomIn 0.5s ease;
     }
-    #lightbox:target {
-      display: flex;
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    @keyframes zoomIn {
+      from {
+        transform: scale(0.7);
+        opacity: 0;
+      }
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
     }
   </style>
 </head>
@@ -98,7 +139,7 @@
     <p>Reverse Engineer • Technician • iOS Developer • Tech Freedom Enthusiast</p>
   </header>
 
-  <div id="lightbox">
+  <div id="lightbox" onclick="this.style.display='none'">
     <img id="lightbox-img" src="" alt="Expanded view">
   </div>
 
@@ -177,8 +218,10 @@
       lightboxImg.src = src;
       lightbox.style.display = 'flex';
     }
-    document.getElementById('lightbox').addEventListener('click', function() {
-      this.style.display = 'none';
+    document.addEventListener('keydown', function(event) {
+      if (event.key === "Escape") {
+        document.getElementById('lightbox').style.display = 'none';
+      }
     });
   </script>
 </body>
