--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
       color: #e0e0e0;
       line-height: 1.6;
     }
+    .contact-menu {
+      position: fixed;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      background: #003366;
+      padding: 1rem;
+      border-radius: 8px 0 0 8px;
+      box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.5);
+      z-index: 1000;
+    }
+    .contact-menu a {
+      display: block;
+      margin: 1rem 0;
+      color: #00ffcc;
+      text-decoration: none;
+      font-weight: bold;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+    .contact-menu a:hover {
+      color: #ffffff;
+      transform: scale(1.1);
+    }
     .hero {
       background: linear-gradient(to right, #003366, #001f33);
       color: #ffffff;
@@ -124,6 +148,12 @@
   </style>
 </head>
 <body>
+  <div class="contact-menu">
+    <a href="mailto:youremail@example.com">Email</a>
+    <a href="https://github.com/yourgithub" target="_blank">GitHub</a>
+    <a href="https://linkedin.com/in/yourlinkedin" target="_blank">LinkedIn</a>
+  </div>
+
   <div class="hero">
     <h1>Braeden Bateman</h1>
     <p>Reverse Engineer • Technician • iOS Developer • Tech Freedom Enthusiast</p>
@@ -132,7 +162,7 @@
   <div id="lightbox" onclick="this.style.display='none'">
     <img id="lightbox-img" src="" alt="Expanded view">
   </div>
-
+  
   <section>
     <h2>iOS Tweak Development</h2>
     <div class="project">
