--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 </head>
 <body>
   <div class="contact-menu">
-    <a href="mailto:youremail@example.com">Email</a>
-    <a href="https://github.com/yourgithub" target="_blank">GitHub</a>
-    <a href="https://linkedin.com/in/yourlinkedin" target="_blank">LinkedIn</a>
+    <a href="mailto:braedenbateman29@hotmail.com">Email</a>
+    <a href="https://github.com/Br4dy-aea" target="_blank">GitHub</a>
+    <a href="www.linkedin.com/in/braeden-bateman-767781360" target="_blank">LinkedIn</a>
   </div>
 
   <div class="hero">
