--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="contact-menu">
     <a href="mailto:braedenbateman29@hotmail.com">Email</a>
     <a href="https://github.com/Br4dy-aea" target="_blank">GitHub</a>
-    <a href="www.linkedin.com/in/braeden-bateman-767781360" target="_blank">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/braeden-bateman-767781360/" target="_blank">LinkedIn</a>
   </div>
 
   <div class="hero">
