--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <h2>PC & Hackintosh Builds</h2>
     <div class="project">
       <div class="badge">Hackintosh</div>
-      <h3>Ryzen Hackintosh (OpenCore)</h3>
+      <h3>Ryzen Hackintosh - Windows (Dual Boot) (OpenCore)</h3>
       <p>Built a macOS Sonoma/Sequoia Hackintosh on Ryzen 5700G with an RX 5600 XT. Configured OpenCore bootloader, mapped USB ports, and applied ACPI patches.</p>
       <div class="screenshot">
         <img src="images/PC1.jpg" alt="White Hackintosh Build" onclick="openLightbox(this.src)">
