--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <li>iGPU: Radeon Vega 8 Graphics</li>
 <li>RAM: 16GB TeamGroup 1*16 @2400 MT/s & 4GB Soldered</li>
 <li>WiFi: Replace</li>
-<li>macOS Version: Big Sur</li>
+<li>macOS Version: Ventura</li>
 </ul>
 </details
 <div class="screenshot">
