--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="project">
       <div class="badge">PS1 Modding</div>
       <h3>PS1 Modchip Recovery</h3>
-      <p>Discovered a PlayStation 1 at a flea market with a half-installed modchip. Completed the wiring and restored full multi-region functionality using William Quade's guides.</p>
+      <p>Discovered a PlayStation 1 at a flea market with a half-installed modchip. Completed the wiring using William Quade's guides via trial and error.</p>
       <div class="screenshot">
         <img src="images/ps1.jpg" alt="PS1 Modchip Install" onclick="openLightbox(this.src)">
         <div class="caption">Recovered and completed PS1 modchip installation.</div>
