--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="project">
       <div class="badge">USB Reverse Engineering</div>
       <h3>Verbatim 32GB USB Flash Drive Reverse Engineering</h3>
-      <p>Reverse engineered a Verbatim USB featuring Alcor AU6989 controller and Micron NAND. Created schematics, performed chip labeling identification, continuity testing, and BOM generation.</p>
+      <p>Reverse engineered a Verbatim USB featuring Alcor AU6989 controller and Micron NAND. Created schematics, BOM generation, removed and reflowed all compopnets to get accurate measurments.</p>
     </div>
   </section>
 
