--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <div class="project">
 <div class="badge">Hackintosh</div>
 <h3>Ryzen Hackintosh - Windows (Dual Boot) (OpenCore)</h3>
-<p>Built a macOS Sonoma/Sequoia Hackintosh on Ryzen 5700G with an RX 5600 XT. Configured OpenCore bootloader, mapped USB ports, and ACPI patches.</p>
+<p>Built a macOS Monterey to Sonoma Hackintosh on Ryzen 5700G with an RX 5600 XT, Dual booting windows with the 7800XT. Configured OpenCore, USB ports(Mapping), and ACPI patches.</p>
 <details>
 <summary>Specs</summary>
 <ul>
@@ -107,7 +107,7 @@
 <li>Storage:2TB Crucial P3 NVMe & 500GB SATA ADATA SU650</li>
 <li>PSU: Gigabyte UD 850W</li>
 <li>Cooling: DeepCool LS720 AIO & Corsair AR120 Case Fans</li>
-<li>macOS Version: Monterey ➔ Sonoma (OpenCore)</li>
+<li>macOS Version: Monterey to Sonoma (OpenCore)</li>
 </ul>
 </details>
 <div class="screenshot">
