--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <div class="project">
 <div class="badge">PC Build</div>
 <h3>Custom PC – Red Theme Build</h3>
-<p>Ryzen 7 1700 and Radeon RX 5600 XT configuration, focusing on clean airflow, red-themed RGB, and budget optimization for gaming and development.</p>
+<p>Ryzen 7 1700 and Radeon RX 5600 XT configuration, focusing on clean airflow, red-themed RGB, and budget setup for gaming and development.</p>
 <details>
 <summary>Specs</summary>
 <ul>
