--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <li>CPU: Ryzen 7 1700</li>
 <li>GPU: Radeon RX 5600 XT</li>
 <li>Motherboard: ASUS Prime B550M-A II</li>
-<li>RAM: 32GB Corsair Vengeance 4*8 @320f0 MT/s</li>
+<li>RAM: 32GB Corsair Vengeance 4*8 @3200 MT/s</li>
 <li>Storage: 500GB SN550 NVMe</li>
 <li>PSU: Cooler Master MWE 450W</li>
 <li>Cooling: DeepCool AS500 & Cooler Master Red Fans</li>
