--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="project">
       <div class="badge">Automotive Electronics</div>
       <h3>Hyperflash Fix – Load Resistor Install</h3>
-      <p>Installed load resistors to prevent hyperflashing after LED signal upgrades. Diagnosed bundled headlight harness wiring using multimeter tracing and safe resistor mounting practices.</p>
+      <p>Installed load resistors to prevent hyperflashing after LED signal upgrades. Diagnosed bundled headlight harness wiring using multimeter and safely mounted the resistors.</p>
       <div class="screenshot">
         <img src="images/resistors.jpg" alt="Load Resistor Install" onclick="openLightbox(this.src)">
       </div>
