--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <p>Installed macOS Ventura on an AMD Ryzen 3 3200U Based Asus VivoBook X512DA. Configured kexts, Wi-Fi, trackpad compatibility, and USB mapping.</p>
 <div class="screenshot">
 <img src="images/Hackintosh.jpg" alt="VivoBook Hackintosh" onclick="openLightbox(this.src)">
-<div class="caption">Big Sur on Asus VivoBook</div>
+<div class="caption">Ventura on Asus VivoBook & Hack Pro</div>
 </div>
 </div>
 
