--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ details[open] summary ~ * {
 }
 </style>
 </head>
-<body class=fade-in">
+<body class="fade-in">
   <div class="contact-menu">
     <a href="mailto:braedenbateman29@hotmail.com">Email</a>
     <a href="https://github.com/Br4dy-aea" target="_blank">GitHub</a>
@@ -110,7 +110,7 @@ details[open] summary ~ * {
     <div class="project">
       <div class="badge">USB Reverse Engineering</div>
       <h3>Verbatim 32GB USB Flash Drive Reverse Engineering</h3>
-      <p>Reverse engineered a Verbatim USB featuring Alcor AU6989 controller and Micron NAND. Created schematics, BOM generation, removed and reflowed all compopnets to get accurate measurments.</p>
+      <p>Reverse engineered a Verbatim USB featuring Alcor AU6989 controller and Micron NAND. Created schematics, BOM generation, removed and reflowed all components to get accurate measurements.</p>
     </div>
   </section>
 
