--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ details[open] summary ~ * {
   </section>
 
   <footer>
-    <p>Website built and maintained by Braeden Bateman • Powered by GitHub Pages</p>
+    <p>Website built by Braeden Bateman • Powered by GitHub</p>
   </footer>
 
   <script>
