--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ details[open] summary ~ * {
 
   <div class="hero">
     <h1>Braeden Bateman</h1>
-    <p>Reverse Engineer • Technician • iOS Tweak Developer • TFE</p>
+    <p>Reverse Engineer • Technician • iOS Tweak Developer • T/F/E</p>
   </div>
 
   <div id="lightbox" onclick="this.style.display='none'">
