--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
  <style>
   body { font-family: 'Poppins', sans-serif; margin: 0; padding: 0; background: #1e1e2f; color: #e0e0e0; overflow-x: hidden; }
   .contact-menu { position: fixed; top: 50%; right: 0; transform: translateY(-50%); background: #003366; padding: 0.5rem; border-radius: 8px 0 0 8px; box-shadow: -2px 2px 10px rgba(0,0,0,0.5); z-index: 1000; }
-  .contact-menu a { display: block; margin: 1rem 0; color: #00ffcc; text-decoration: none; font-size: 1.2rem; transition: all 0.3s ease; }
+  .contact-menu a { display: block; margin: 1rem 0; color: #66ccff; text-decoration: none; font-size: 1.2rem; transition: all 0.3s ease; }
   .contact-menu a:hover { color: #ffffff; transform: scale(1.2); }
   .hero { background: linear-gradient(to right, #003366, #001f33); color: #ffffff; text-align: center; padding: 7rem 2rem 5rem 2rem; backdrop-filter: blur(6px); box-shadow: 0 8px 16px rgba(0,0,0,0.5); }
   .hero h1 { font-size: 3.5rem; margin-bottom: 1rem; animation: fadeInDown 1s ease-out; }
   .hero p { font-size: 1.3rem; font-weight: 300; animation: fadeInUp 1.2s ease-out; }
   section { padding: 2rem; max-width: 960px; margin: 3rem auto; background: #29293d; border-radius: 12px; animation: fadeInUp 1.2s ease; }
-  h2 { color: #00ffcc; font-size: 2.2rem; margin-bottom: 1.5rem; border-bottom: 1px solid #00ffcc; padding-bottom: 0.5rem; text-align: center; }
+  h2 { color: #66ccff; font-size: 2.2rem; margin-bottom: 1.5rem; border-bottom: 1px solid #66ccff; padding-bottom: 0.5rem; text-align: center; }
   .project { background: #33334d; padding: 1.5rem; border-radius: 10px; margin-bottom: 2rem; box-shadow: 0 2px 10px rgba(0,0,0,0.5); transition: transform 0.3s ease, box-shadow 0.3s ease; }
   .project:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,255,204,0.4); }
   .screenshot img, .screenshot video { width: 100%; max-width: 720px; display: block; margin: 1rem auto; border: 1px solid #555; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.6); cursor: pointer; }
   .caption { text-align: center; font-style: italic; margin-top: -0.5rem; color: #bbb; }
-  .badge { display: inline-block; background: #00ffcc; color: #1e1e2f; padding: 0.2rem 0.6rem; margin: 0.5rem 0; border-radius: 12px; font-size: 0.8rem; font-weight: bold; }
+  .badge { display: inline-block; background: #66ccff; color: #1e1e2f; padding: 0.2rem 0.6rem; margin: 0.5rem 0; border-radius: 12px; font-size: 0.8rem; font-weight: bold; }
   details { background: #2c2c3c; border-radius: 8px; padding: 1rem; margin-top: 1rem; cursor: pointer; }
-  details summary { font-weight: bold; font-size: 1rem; color: #00ffcc; }
+  details summary { font-weight: bold; font-size: 1rem; color: #66ccff; }
   footer { text-align: center; color: #777; font-size: 0.8rem; padding: 2rem 1rem; border-top: 1px solid #333; margin-top: 3rem; }
-  .highlight { font-weight: bold; color: #00ffcc; }
+  .highlight { font-weight: bold; color: #66ccff; }
   #lightbox { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); display: none; justify-content: center; align-items: center; z-index: 999; }
   #lightbox img { max-width: 90%; max-height: 90%; border: 4px solid white; border-radius: 10px; animation: zoomIn 0.5s ease; }
   @keyframes fadeInDown { from {opacity: 0; transform: translateY(-40px);} to {opacity: 1; transform: translateY(0);} }
@@ -234,7 +234,7 @@ AOS.init({
 particlesJS('particles-js', {
   particles: {
     number: { value: 45, density: { enable: true, value_area: 800 } },
-    color: { value: "#00ffcc" },
+    color: { value: "#66ccff" },
     shape: { type: "circle" },
     opacity: { value: 0.5, random: true },
     size: { value: 3, random: true },
