--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ details[open] summary ~ * {
   </section>
 
   <section data-aos="fade-up">
-    <h2>Reverse Engineering & Firmware Projects</h2>
+    <h2>Reverse Engineering & Hardware Mods</h2>
     <div class="project">
       <div class="badge">PS2 Modding</div>
       <h3>PS2 Modbo 5.0 Install – GH-022 Board</h3>
@@ -191,7 +191,7 @@ details[open] summary ~ * {
 </section>
 
   <section data-aos="fade-up">
-    <h2>Hardware Mods & Diagnostics</h2>
+    <h2>Car DIY & Diagnostics</h2>
     <div class="project">
       <div class="badge">Automotive Electronics</div>
       <h3>Hyperflash Fix – Load Resistor Install</h3>
