--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ With a 50W resistor, only about 65% of its rated capacity is used, this is a saf
   </section>
 
   <footer>
-    <p>Built by Braeden Bateman • Don't Chase Gold</p>
+    <p>Built by Br4dy • Don't Chase Gold</p>
   </footer>
 
   <script>
