--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ details[open] summary ~ * {
 <p>Installed macOS Ventura on an AMD Ryzen 3 3200U Based Asus VivoBook X512DA. Configured kexts, Wi-Fi, trackpad compatibility, and USB mapping.</p>
 <div class="screenshot">
 <img src="images/Hackintosh.jpg" alt="VivoBook Hackintosh" onclick="openLightbox(this.src)">
-<div class="caption">Ventura on Asus VivoBook & Hack Pro</div>
+<div class="caption">Ventura on Asus VivoBook & Sonoma Hack Pro</div>
 </div>
 </div>
 
