--- a/index.html
+++ b/index.html
@@ -134,9 +134,11 @@ Whether it’s developing new features for my phone, understanding technology so
     <div class="project">
       <div class="badge">PS1 Modding</div>
       <h3>PS1 Modchip Recovery</h3>
-      <p>Discovered a PlayStation 1 at a flea market with a half-installed modchip. Completed the wiring using William Quade's guides via trial and error.</p>
+      <p>Discovered a PlayStation 1 at a flea market with a half-installed modchip. Completed the wiring using <a href="https://quade.co" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">William Quade</a>
+ guide's via trial and error.</p>
       <ul style="list-style: disc; margin-left: 2rem; color: #aaa; font-size: 0.95rem;">
-  <li>Tools Used: Rockman Tools RM-75 Workstation Solder/Hot-Air, Multimeter, Reverse Engineering</li>
+  <li>Tools Used: Rockman Tools RM-75 Workstation Solder/Hot-Air, and <a href="https://quade.co" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">William Quade</a>
+ guide and documentation.</li>
 </ul>
 	  <div class="screenshot">
         <img src="images/ps1.jpg" alt="PS1 Modchip Install" onclick="openLightbox(this.src)">
