--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@ details[open] summary ~ * {
   position: relative;
   z-index: 1;
 }
+a {
+  color: #66ccff;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: #ffffff;
+}
 
 </style>
 </head>
