--- a/index.html
+++ b/index.html
@@ -63,15 +63,18 @@ details[open] summary ~ * {
   position: relative;
   z-index: 1;
 }
+
 a {
   color: #66ccff;
   text-decoration: underline;
+  transition: all 0.3s ease;
 }
 
 a:hover {
   color: #ffffff;
+  text-decoration: underline;
+  transform: translateY(-2px);
 }
-
 </style>
 </head>
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
