--- a/index.html
+++ b/index.html
@@ -100,13 +100,17 @@ a:hover {
   
   <section id="about">
   <h2>About Me</h2>
-  <p style="text-align: center; max-width: 720px; margin: 1rem auto; font-size: 1.1rem; line-height: 1.8;">
-   I enjoy hardware modding, reverse engineering, iOS tweak development, and all kinds of custom projects.
+  <details>
+    <summary style="cursor: pointer; font-size: 1.2rem; color: #66ccff; margin-bottom: 1rem;">Click to Read More</summary>
+    <p style="text-align: center; max-width: 720px; margin: 1rem auto; font-size: 1.1rem; line-height: 1.8; color: #ccc;">
+      I enjoy hardware modding, reverse engineering, iOS tweak development, and all kinds of custom projects.
 With a passion for understanding how things work behind the scenes, I combine hands-on work with modern principles.
 My goal is to explore technology in a way I enjoy — creating, learning, and improving every step of the way.
 Whether it’s developing new features for my phone, understanding technology so I can fix rather than replace, adding mod chips for freedom on consoles, or working on DIY projects, I’m driven by need for technical independence.
-  </p>
+    </p>
+  </details>
 </section>
+
 
 
   <section data-aos="fade-up">
