--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ a:hover {
   <section id="about">
   <h2>About Me</h2>
   <details>
-    <summary style="cursor: pointer; font-size: 1.2rem; color: #66ccff; margin-bottom: 1rem;">Summary</summary>
+    <summary style="cursor: pointer; font-size: 1.2rem; color: #66ccff; margin-bottom: 1rem;">Click to Expand</summary>
     <p style="text-align: center; max-width: 720px; margin: 1rem auto; font-size: 1.1rem; line-height: 1.8; color: #ccc;">
       I enjoy hardware modding, reverse engineering, iOS tweak development, and all kinds of custom projects.
 With a passion for understanding how things work behind the scenes, I combine hands-on work with modern principles.
