--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@ details summary {
 }
 
 details summary::before {
-  content: "▶";
+  content: "";
   position: absolute;
   left: 0;
-  top: 0;
-  font-size: 1rem;
+  top: 0.4rem;
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 8px solid #66ccff;
   transform: rotate(0deg);
   transition: transform 0.3s ease;
-  color: #66ccff; 
 }
 
 details[open] summary::before {
