--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@ details[open] summary::before {
   transform: rotate(90deg);
 }
 
+details summary {
+  list-style: none;
+  position: relative;
+  padding-left: 1.5rem;
+}
+
+details summary::-webkit-details-marker {
+  display: none;
+}
+
 #particles-js {
   position: fixed;
   width: 100%;
