--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brady Bateman Portfolio</title>
+  
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  
+
+  
  <style>
   body { font-family: 'Poppins', sans-serif; margin: 0; padding: 0; background: #1e1e2f; color: #e0e0e0; overflow-x: hidden; }
   .contact-menu { position: fixed; top: 50%; right: 0; transform: translateY(-50%); background: #003366; padding: 0.5rem; border-radius: 8px 0 0 8px; box-shadow: -2px 2px 10px rgba(0,0,0,0.5); z-index: 1000; }
@@ -110,11 +117,9 @@ a:hover {
 }
 </style>
 </head>
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-<body class="fade-in">
-<div id="particles-js"></div>
+
+	<body class="fade-in">
+   <div id="particles-js"></div>
 
   <div class="contact-menu">
     <a href="mailto:braedenbateman29@hotmail.com">Email</a>
@@ -131,7 +136,7 @@ a:hover {
     <img id="lightbox-img" src="" alt="Expanded view">
   </div>
   
-  <section id="about">
+  <section id="about" data-aos="fade-up">
   <h2>About Me</h2>
   <details>
     <summary style="cursor: pointer; font-size: 1.2rem; color: #66ccff; margin-bottom: 1rem;">Click to Expand</summary>
