--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ With a 50W resistor, only about 65% of its rated capacity is used, this is a saf
   </section>
 
   <footer>
-  <p>Built from broken rules — Braeden Bateman</p>
+  <p>Built from broken rules</p>
   <p style="font-size: 0.7rem; color: #555;">Powered by GitHub Pages</p>
 </footer>
 
