--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
   .contact-menu a { display: block; margin: 1rem 0; color: #66ccff; text-decoration: none; font-size: 1.2rem; transition: all 0.3s ease; }
   .contact-menu a:hover { color: #ffffff; transform: scale(1.2); }
   .hero { background: linear-gradient(to right, #003366, #001f33); color: #ffffff; text-align: center; padding: 7rem 2rem 5rem 2rem; backdrop-filter: blur(6px); box-shadow: 0 8px 16px rgba(0,0,0,0.5); }
-  .hero h1 { font-size: 3.5rem; margin-bottom: 1rem; animation: fadeInDown 1s ease-out; }
-  .hero p { font-size: 1.3rem; font-weight: 300; animation: fadeInUp 1.2s ease-out; }
-  section { padding: 2rem; max-width: 960px; margin: 3rem auto; background: #29293d; border-radius: 12px; animation: fadeInUp 1.2s ease; }
+  .hero h1 { font-size: 3.5rem; margin-bottom: 1rem; opacity: 0; animation: fadeInDown 1s ease-out forwards; animation-delay: 0.3s; text-shadow: 0 0 8px rgba(102, 204, 255, 0.7); }
+  .hero p { font-size: 1.3rem; font-weight: 300; opacity: 0; animation: fadeInUp 1s ease-out forwards; animation-delay: 0.6s; text-shadow: 0 0 5px rgba(102, 204, 255, 0.5); }
   h2 { color: #66ccff; font-size: 2.2rem; margin-bottom: 1.5rem; border-bottom: 1px solid #66ccff; padding-bottom: 0.5rem; text-align: center; }
   .project { background: #33334d; padding: 1.5rem; border-radius: 10px; margin-bottom: 2rem; box-shadow: 0 2px 10px rgba(0,0,0,0.5); transition: transform 0.3s ease, box-shadow 0.3s ease; }
   .project:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,255,204,0.4); }
@@ -27,7 +26,6 @@
   .caption { text-align: center; font-style: italic; margin-top: -0.5rem; color: #bbb; }
   .badge { display: inline-block; background: #66ccff; color: #1e1e2f; padding: 0.2rem 0.6rem; margin: 0.5rem 0; border-radius: 12px; font-size: 0.8rem; font-weight: bold; }
   details { background: #2c2c3c; border-radius: 8px; padding: 1rem; margin-top: 1rem; cursor: pointer; }
-  details summary { font-weight: bold; font-size: 1rem; color: #66ccff; }
   footer { text-align: center; color: #777; font-size: 0.8rem; padding: 2rem 1rem; border-top: 1px solid #333; margin-top: 3rem; }
   .highlight { font-weight: bold; color: #66ccff; }
   #lightbox { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); display: none; justify-content: center; align-items: center; z-index: 999; }
@@ -86,6 +84,9 @@ details summary {
   list-style: none;
   position: relative;
   padding-left: 1.5rem;
+  font-weight: bold;
+  font-size: 1rem;
+  color: #66ccff;
 }
 
 details summary::-webkit-details-marker {
@@ -115,6 +116,20 @@ a:hover {
   text-decoration: underline;
   transform: translateY(-2px);
 }
+
+.underline {
+  width: 80px;
+  height: 3px;
+  background: #66ccff;
+  margin: 1rem auto;
+  border-radius: 2px;
+  animation: expand 2s ease forwards;
+}
+
+@keyframes expand {
+  from { width: 0; }
+  to { width: 80px; }
+}
 </style>
 </head>
 
@@ -129,6 +144,7 @@ a:hover {
 
   <div class="hero">
     <h1>Braeden Bateman</h1>
+    <div class="underline"></div>
     <p>Reverse Engineer • Technician • iOS Tweak Developer • /T /F /E</p>
   </div>
 
