--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Whether it’s developing new features for my phone, understanding technology so
     <div class="project">
   <div class="badge">Case Study</div>
   <h3>Verbatim 32GB USB Flash Drive – Full Reverse Engineering Report</h3>
-  <p>In-depth analysis covering teardown, component desoldering, measurement documentation, schematic reconstruction using AutoCAD, and insights into the design of flash storage devices. This project demonstrates practical application of reverse engineering principles, hardware diagnostics, and schematic replication. Very special Thank you to Professor Sonny Tutti who took the time to recover the full write up I had lost.</p>
+  <p>In-depth analysis covering teardown, component desoldering, measurement documentation, schematic reconstruction using AutoCAD, and insights into the design of flash storage devices. This project demonstrates practical application of reverse engineering principles, hardware diagnostics, and schematic replication. Very special Thank you to Professor Sonny Tutti who took the time to recover the full report I had lost.</p>
   <a href="documents/ReverseEngineeringFinalReport.pdf" target="_blank" style="display: inline-block; background: #66ccff; color: #1e1e2f; padding: 0.6rem 1.2rem; border-radius: 8px; text-decoration: none; font-weight: bold; margin-top: 1rem; transition: background 0.3s ease;">View Full Report (PDF)</a>
 </div>
 
