--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Whether it’s developing new features for my phone, understanding technology so
 <div class="project">
 <div class="badge">Hackintosh</div>
 <h3>Ryzen Hackintosh - Windows (Dual Boot) (OpenCore)</h3>
-<p>Built a macOS Monterey to Sonoma Hackintosh on Ryzen 5700G with an RX 5600 XT, Dual booting windows with the 7800XT. Configured OpenCore, USB ports(Mapping), and ACPI patches.</p>
+<p>Built a macOS Monterey to Sonoma Hackintosh on Ryzen 5700G with an RX 5600 XT, Dual booting windows with the 7800XT. Configured OpenCore, USB ports(Mapping), and ACPI patches. The DeepCool CK500 officially supports only two top-mounted 120mm fans, but I managed to fit a third by using small zip ties as mounting points. There’s just enough clearance to make this work cleanly.</p>
 <ul style="list-style: disc; margin-left: 2rem; color: #aaa; font-size: 0.95rem;">
   <li>Tools Used: <a href="https://github.com/acidanthera/OpenCorePkg" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">OpenCore</a>
  , and <a href="https://dortania.github.io/OpenCore-Install-Guide/" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">Dortania Guide.</a>
