--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ Whether it’s developing new features for my phone, understanding technology so
 </ul>
 </details>
 <div class="screenshot">
-<img src="images/PC1.jpg" alt="White Hackintosh Build" onclick="openLightbox(this.src)">
+<img src="images/PC1.jpg" alt="White & Black Hackintosh Build" onclick="openLightbox(this.src)">
 </div>
 </div>
 
