--- a/index.html
+++ b/index.html
@@ -251,10 +251,12 @@ Whether it’s developing new features for my phone, understanding technology so
     </div>
 
     <div class="project">
-      <div class="badge">USB Reverse Engineering</div>
-      <h3>Verbatim 32GB USB Flash Drive Reverse Engineering</h3>
-      <p>Reverse engineered a Verbatim USB featuring Alcor AU6989 controller and Micron NAND. Created schematics, BOM generation, removed and reflowed all components to get accurate measurements.</p>
-    </div>
+  <div class="badge">Case Study</div>
+  <h3>Verbatim 32GB USB Flash Drive – Full Reverse Engineering Report</h3>
+  <p>In-depth analysis covering teardown, component desoldering, measurement documentation, schematic reconstruction using AutoCAD, and educational insights into the design of flash storage devices. This project demonstrates practical application of reverse engineering principles, hardware diagnostics, and schematic replication.</p>
+  <a href="documents/ReverseEngineeringFinalReport.pdf" target="_blank" style="display: inline-block; background: #66ccff; color: #1e1e2f; padding: 0.6rem 1.2rem; border-radius: 8px; text-decoration: none; font-weight: bold; margin-top: 1rem; transition: background 0.3s ease;">View Full Report (PDF)</a>
+</div>
+
   </section>
 
   <section data-aos="fade-up">
