--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Whether it’s developing new features for my phone, understanding technology so
 	<div class="project">
   <div class="badge">iOS Reverse Engineering</div>
   <h3>Decrypting iOS 18 </h3>
-  <p>For tweak development and application analysis on iOS 18, I decrypted IPSWs using the <a href="https://github.com/blacktop/ipsw" target="_blank" style="color: #66ccff; text-decoration: underline;">BlackTop ipsw</a> tool with AEA (AppleEncryptedArchive) mode. This enabled me to access decrypted system applications like Calculator.app for reverse engineering and tweak injection testing.</p>
+  <p>For tweak development and application analysis on iOS 18, I decrypted IPSWs using the <a href="https://github.com/blacktop/ipsw" target="_blank" style="color: #66ccff; text-decoration: underline;">BlackTop ipsw</a> tool with AEA (AppleEncryptedArchive). This enabled me to access decrypted system applications like Calculator.app for reverse engineering and tweak injection testing.</p>
 
   <ul style="list-style: disc; margin-left: 2rem; color: #aaa; font-size: 0.95rem; line-height: 1.6; margin-top: 1rem;">
     <li><strong>Download IPSW:</strong> Downloaded the official iOS 18 IPSW file from Apple servers for the target device.</li>
