--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Whether it’s developing new features for my phone, understanding technology so
 <li>APU: Ryzen 7 5700G</li>
 <li>GPU: XFX Radeon 7800 XT & XFX Radeon RX 5600 XT</li>
 <li>Motherboard: AORUS B550 Elite AX V2</li>
-<li>RAM: 64GB Corsair LPX 4*16 @3533 MT/s</li>
+<li>RAM: 64GB Corsair Vengeance LPX 4*16 @3600 MT/s</li>
 <li>Storage:2TB Crucial P3 NVMe & 500GB SATA ADATA SU650</li>
 <li>PSU: Gigabyte UD 850W</li>
 <li>Cooling: DeepCool LS720 AIO & Corsair AR120 Case Fans</li>
