--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@ Whether it’s developing new features for my phone, understanding technology so
       <div class="caption">Old terminal-style wallpaper with blinking cursor hodden message</div>
     </div>
 	
+	<div class="screenshot">
+      <img src="images/lightweightwallpaperpreview.jpg" alt="Horizontal Lines-Good for low resource PC" onclick="openLightbox(this.src)">
+      <div class="caption">Light Weight animated horizontal lines</div>
+    </div>
+	
+	
   </div>
 </section>
 
