--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ Whether it’s developing new features for my phone, understanding technology so
 	
 	<div class="screenshot">
       <img src="images/oldterminalwallpaperpreview.jpg" alt="Terminal Wallpaper" onclick="openLightbox(this.src)">
-      <div class="caption">Old terminal-style wallpaper with blinking cursor hodden message</div>
+      <div class="caption">Old terminal-style wallpaper with blinking cursor hidden message</div>
     </div>
 	
 	<div class="screenshot">
