--- a/index.html
+++ b/index.html
@@ -241,9 +241,13 @@ Whether it’s developing new features for my phone, understanding technology so
       <img src="images/amdwallpaperpreview.jpg" alt="AMD Style Wallpaper" onclick="openLightbox(this.src)">
       <div class="caption">AMD-themed animated wallpaper with trace effects</div>
     </div>
+	
+	<div class="screenshot">
+      <img src="images/intelwallpaperpreview.jpg" alt="Intel Style Wallpaper" onclick="openLightbox(this.src)">
+      <div class="caption">Intel-themed animated wallpaper with trace effects</div>
+    </div>
 
-    
-
+   
     <div class="screenshot">
       <img src="images/nvidiawallpaperpreview.jpg" alt="Nvidia Style Wallpaper" onclick="openLightbox(this.src)">
       <div class="caption">Nvidia-themed animated wallpaper with trace effects</div>
