--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Whether it’s developing new features for my phone, understanding technology so
 <div class="project">
 <div class="badge">Hackintosh</div>
 <h3>Ryzen Hackintosh - Windows (Dual Boot) (OpenCore)</h3>
-<p>Built a macOS Monterey to Sonoma Hackintosh on Ryzen 5700G with an RX 5600 XT, Dual booting windows with the 7800XT. Configured OpenCore, USB ports(Mapping), and ACPI patches. The DeepCool CK500 officially supports only two top-mounted 120mm fans, but I managed to fit a third by using small zip ties as mounting points. There’s just enough clearance to make this work cleanly.</p>
+<p>Built a macOS Monterey to Sonoma Hackintosh on Ryzen 9 5900XT(Previously R7 5700G) with an RX 5600 XT, Dual booting windows with the 7800XT. Configured OpenCore, USB ports(Mapping), and ACPI patches. The DeepCool CK500 officially supports only two top-mounted 120mm fans, but I managed to fit a third by using small zip ties as mounting points. There’s just enough clearance to make this work cleanly.</p>
 <ul style="list-style: disc; margin-left: 2rem; color: #aaa; font-size: 0.95rem;">
   <li>Tools Used: <a href="https://github.com/acidanthera/OpenCorePkg" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">OpenCore</a>
  , and <a href="https://dortania.github.io/OpenCore-Install-Guide/" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">Dortania Guide.</a>
@@ -324,7 +324,7 @@ Whether it’s developing new features for my phone, understanding technology so
 <summary>Specs</summary>
 <ul>
 <li>Case: DeepCool CK500</li>
-<li>APU: Ryzen 7 5700G</li>
+<li>CPU: Ryzen 9 5900XT(Previously R7 5700G)</li>
 <li>GPU: XFX Radeon 7800 XT & XFX Radeon RX 5600 XT</li>
 <li>Motherboard: AORUS B550 Elite AX V2</li>
 <li>RAM: 64GB Corsair Vengeance LPX 4*16 @3600 MT/s</li>
@@ -336,6 +336,11 @@ Whether it’s developing new features for my phone, understanding technology so
 </details>
 <div class="screenshot">
 <img src="images/PC1.jpg" alt="White & Black Hackintosh Build" onclick="openLightbox(this.src)">
+<div class="caption">Ryzen 9 5900XT / 7000XT-5600XT Configuration</div>
+<div class="screenshot">
+<img src="images/MacOSR9.jpg" alt="MacOS on R9 5900XT/5600XT" onclick="openlightbox(this.src)">
+<div class="caption">MacOS Monterey Metal on Ryzen 9 5900XT/5600XT</div>
+
 </div>
 </div>
 
