--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@ Whether it’s developing new features for my phone, understanding technology so
 <div class="screenshot">
 <img src="images/PC1.jpg" alt="White & Black Hackintosh Build" onclick="openLightbox(this.src)">
 <div class="caption">Ryzen 9 5900XT / 7000XT-5600XT Configuration</div>
-<div class="screenshot">
-<img src="images/MacOSR9.jpg" alt="MacOS on R9 5900XT/5600XT" onclick="openlightbox(this.src)">
-<div class="caption">MacOS Monterey Metal on Ryzen 9 5900XT/5600XT</div>
 
+<div class="screenshot">
+<img src="images/MacOSR9.jpg" alt="MacOS on R9 5900XT/5600XT" onclick="openLightbox(this.src)">
+<div class="caption">MacOS Monterey Metal on Ryzen 9 5900XT/5600XT</div>
 </div>
 </div>
 
