--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Whether it’s developing new features for my phone, understanding technology so
     <div class="project">
       <div class="badge">PS1 Modding</div>
       <h3>PS1 Modchip Recovery</h3>
-      <p>Discovered a PlayStation 1 at a flea market with a half-installed modchip. Completed the wiring using <a href="https://quade.co" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">William Quade</a>
+      <p>Found a PlayStation 1 at a flea market with a half-installed modchip. Completed the wiring using <a href="https://quade.co" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">William Quade</a>
  guide's via trial and error.</p>
       <ul style="list-style: disc; margin-left: 2rem; color: #aaa; font-size: 0.95rem;">
   <li>Tools Used: Rockman Tools RM-75 Workstation Solder/Hot-Air, <a href="https://quade.co" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">William Quade</a>
@@ -301,7 +301,7 @@ Whether it’s developing new features for my phone, understanding technology so
     </div>
 
     <div class="project">
-  <div class="badge">In-Depth Reports</div>
+  <div class="badge">In-Depth Report</div>
   <h3>Verbatim 32GB USB Flash Drive – Full Reverse Engineering Report</h3>
   <p>In-depth analysis covering teardown, component desoldering, measurement documentation, schematic reconstruction using AutoCAD, and insights into the design of flash storage devices. This project demonstrates practical application of reverse engineering principles, hardware diagnostics, and schematic replication. Very special Thank you to Professor Sonny Tutti who took the time to recover the full report I had lost.</p>
   <a href="documents/ReverseEngineeringFinalReport.pdf" target="_blank" style="display: inline-block; background: #66ccff; color: #1e1e2f; padding: 0.6rem 1.2rem; border-radius: 8px; text-decoration: none; font-weight: bold; margin-top: 1rem; transition: background 0.3s ease;">View Full Report (PDF)</a>
@@ -314,7 +314,7 @@ Whether it’s developing new features for my phone, understanding technology so
 <div class="project">
 <div class="badge">Hackintosh</div>
 <h3>Ryzen Hackintosh - Windows (Dual Boot) (OpenCore)</h3>
-<p>Built a macOS Monterey to Sonoma Hackintosh on Ryzen 9 5900XT(Previously R7 5700G) with an RX 5600 XT, Dual booting windows with the 7800XT. Configured OpenCore, USB ports(Mapping), and ACPI patches. The DeepCool CK500 officially supports only two top-mounted 120mm fans, but I managed to fit a third by using small zip ties as mounting points. There’s just enough clearance to make this work cleanly.</p>
+<p>Built a macOS Monterey to Sonoma Hackintosh on Ryzen 9 5900XT (Previously R7 5700G) with an RX 5600 XT, Dual booting windows with the 7800XT. Configured OpenCore, USB ports(Mapping), and ACPI patches. The DeepCool CK500 officially supports only two top-mounted 120mm fans, but I managed to fit a third by using small zip ties as mounting points. There’s just enough clearance to make this work cleanly.</p>
 <ul style="list-style: disc; margin-left: 2rem; color: #aaa; font-size: 0.95rem;">
   <li>Tools Used: <a href="https://github.com/acidanthera/OpenCorePkg" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">OpenCore</a>
  , and <a href="https://dortania.github.io/OpenCore-Install-Guide/" target="_blank" rel="noopener noreferrer" style="color: #66ccff; text-decoration: underline;">Dortania Guide.</a>
@@ -341,7 +341,7 @@ Whether it’s developing new features for my phone, understanding technology so
 
 <div class="screenshot">
 <img src="images/MacOSR9.jpg" alt="MacOS on R9 5900XT/5600XT" onclick="openLightbox(this.src)">
-<div class="caption">MacOS Monterey Metal on Ryzen 9 5900XT/5600XT</div>
+<div class="caption">MacOS Monterey on Ryzen 9 5900XT/5600XT Metal</div>
 </div>
 </div>
 
@@ -387,7 +387,7 @@ Whether it’s developing new features for my phone, understanding technology so
     <div class="project">
       <div class="badge">Automotive</div>
       <h3>Hyperflash Fix – Load Resistor Install</h3>
-      <p>Installed (Soldered) load resistors to stop hyperflashing after Halogen to LED Swap. Hyperflashing occurs when swapping in LEDs without resistors because LEDs use significantly less power and don't draw the same amount of current as halogen bulbs. This makes the car think a bulb has burned out, causing "hyperflashing." Resistors fix the issue by adding artificial load to the circuit, imitating the original bulb's current draw so the car’s flasher relay operates at normal speed.
+      <p>Soldered load resistors to stop hyperflashing after Halogen to LED Swap. Hyperflashing occurs when swapping in LEDs without resistors because LEDs use significantly less power and don't draw the same amount of current as halogen bulbs. This makes the car think a bulb has burned out, causing "hyperflashing." Resistors fix the issue by adding artificial load to the circuit, imitating the original bulb's current draw so the car’s flasher relay operates at normal speed.
 
 Most vehicles expect around 1.5A–2.5A per bulb, meaning you need a minimum 35W 6Ω resistor wired across each signal wire and ground (Thats 8 Solder/Crimp points). Though, 50W 6Ω (6RJ) resistors are the universal best option, because under a running engine voltage (14V), the math is:
 
